Move bucket object specific permissions to bucket definition in yamcs.yaml